auth-div overflow fix

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -111,7 +111,6 @@ a {
     display: flex;
     height: 100vh;
     flex-direction: column;
-    overflow: hidden;
 }
 
 main {
